 - packaging-apt-dpkg.py: Refresh Contents.gz cache if it is older than one
   day.
 - crashdb.py: Ensure that address_signature duplicate db table does not have
   multiple identical signatures by making it a primary key. Bump the db format
   to "3". Existing databases need to be migrated manually as SQLite does not
   allow adding a "PRIMARY KEY" constraint to existing tables.

1.90 (2011-11-24):
------------------
First beta release of 2.0 which introduces client-side duplicate checking.

Bug fixes:
 - backends/packaging-apt-dpkg.py: Fix another test case failure when ddeb
   repository is not enabled.
 - backends/packaging-apt-dpkg.py: Fix handling of explicit cache directory
   name when it is a relative path.
 - launchpad.py: Only query for bugs after 2011-08-01, to avoid timeouts.
 - ui.py: Also anonymize standard bug title. (LP: #893863)
 - launchpad.py: Current Launchpad cannot have private bugs which affect
   multiple projects. Fix test suite accordingly.

Improvements:
 - report.py: Break out new method stacktrace_top_function() from
   standard_title(), so that other parts of the code can use this as well.
 - launchpad.net: When sending retraced results back to the bug report, update
   the topmost function in the bug title. (LP: #869970)
 - report.py, add_gdb_info(): Add a new field "StacktraceAddressSignature"
   which is a heuristic signature for signal crashes. This should be used if
   crash_signature() fails, i. e. the Stacktrace field does not have enough
   symbols. This can be used to check for duplicates on the client side,
   provided that the crash database server supports querying for these.
   Do not expose this field when uploading to crash databases though, as it can
   be recomputed from the already existing information (ProcMaps and
   Stacktrace) and thus would just clutter the reports.
 - crashdb.py: Add a table "version" with the database format version. Add
   automatic upgrading to the most current format.